objects/tspa__VRA_Report_Knowledge__c.object
<CustomObject>
    <fields>
        <fullName>tspa__Article_Number__c</fullName>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Image_Count__c</fullName>
        <label>Image Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tspa__Object_Id__c</fullName>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Visual_Remote_Assistant_Reports__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visual Remote Assistant Reports</label>
        <referenceTo>tspa__Visual_History__c</referenceTo>
        <relationshipLabel>VRA - Report Knowledge</relationshipLabel>
        <relationshipName>VRA_Report_Knowledge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tspa__sessionId__c</fullName>
        <externalId>true</externalId>
        <label>sessionId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>VRA - Report Knowledge</label>
    <nameField>
        <displayFormat>KMS-{0000}</displayFormat>
        <label>VRA - Report Knowledge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VRA - Report Knowledge</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>